--- a/.github/workflows/latex-build.yml
+++ b/.github/workflows/latex-build.yml
@@ -32,8 +32,9 @@ jobs:
           echo "LaTeX build completed successfully without errors or warnings."
         fi
 
-    - name: Upload PDF
-      uses: actions/upload-artifact@v4
+    - name: Release
+      uses: softprops/action-gh-release@v2
       with:
-        name: main.pdf
-        path: main.pdf
+        name: Release ${{ github.ref_name }} ${{ github.event.head_commit.message }}
+        tag_name: ${{ github.ref_name }}
+        files: main.pdf
